log
Mon Mar 15 02:39:40 UTC 2021: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:15:4: error: ‘C’ undeclared (first use in this function)
   *C = a + b;
    ^
exercises.c:15:4: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
Mon Mar 15 02:39:48 UTC 2021: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|6
total_score: 10/70
e8b0cf8
Mon Mar 15 02:44:57 UTC 2021: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  2|5
total_score: 20/70
39c5684
Mon Mar 15 03:04:51 UTC 2021: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
0d54a2a
Mon Mar 15 03:15:02 UTC 2021: 
 exercises.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|3
total_score: 40/70
62a360f
Mon Mar 15 03:34:40 UTC 2021: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|3
total_score: 40/70
6f01f50
Mon Mar 15 03:37:28 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
5f7c080
Mon Mar 15 03:42:14 UTC 2021: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  7|1
total_score: 60/70
c63348b
Mon Mar 15 03:54:57 UTC 2021: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  8|0
total_score: 70/70
8bfdbf1
Mon Mar 15 03:58:29 UTC 2021: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
7a576e6
Mon Mar 15 03:59:47 UTC 2021: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  8|0
total_score: 70/70
9a2eae2
